--- a/public/style.css
+++ b/public/style.css
@@ -8,10 +8,19 @@
     align-items: center;
     height: 75vh;
     width: 70%;
-    color: white;
+    color: #757575;
     font-family:'Lato', sans-serif;
     margin-left: 20px;
 }
+
+span {
+    background-image: url("https://images.unsplash.com/photo-1507629221898-576a56b530bb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
+    height: 587px;
+    width: 500px;
+    opacity: 2.8;
+}
+
+
 .Clouds {
     background-image: url("https://images.unsplash.com/photo-1501630834273-4b5604d2ee31?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
     height: 587px;
@@ -44,6 +53,7 @@ form {
     margin-top: 20px;
     height: 30px;
     width: 250px;
+    position: relative;
 }
 
 form, h1, h3, p {
@@ -51,6 +61,7 @@ form, h1, h3, p {
 }
 
 .content {
+    margin-top: 25px;
     height: 50vh;
     flex:1;
     display:flex;
@@ -73,8 +84,23 @@ h1 {
 }
 
 .input {
+    width: 100%;
     font-size: 30px;
     background: transparent;
     border:0;
-    color: white;
+    color: #757575;
 }
+
+.button {
+    background-color: grey;
+    color: white;
+    border-color: grey;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+/* button {
+    width: 40px;
+    position: absolute;
+    top: 0;
+    right: 0;
+  } */
